# swarch2026i-project

./: .gitignore  I5_2A.md  README.md  docker-compose.yml  postgres-init.sql
auth-service/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: 2026_03_05_1918-61dd8e921998_create_language_streak_and_user_tables.py  2026_03_10_1207-57e77ef4086a_add_tables.py  2026_03_10_1300-a3f9c812d547_seed_languages.py  2026_03_14_1200-f1a2b3c4d5e6_fix_constraints_add_streak_unique.py
auth-service/app/: main.py
auth-service/app/core/: config.py  dependencies.py  validation.py
auth-service/app/models/: base.py  language.py  streak.py  user.py
auth-service/app/routes/: gql_users.py  users.py
auth-service/app/schemas/: users.py
auth-service/app/types/: gql_users.py
auth-service/tests/: conftest.py  test_health.py  test_users.py
core-service/: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
core-service/alembic/: env.py
core-service/alembic/versions/: 2026_03_05_1318-c2c1fdd62711_create_language_phrase_review_data_.py  2026_03_11_2055-a1b2c3d4e5f6_seed_languages_table.py  2026_03_11_2058-b2c3d4e5f6g7_seed_sample_phrases.py  2026_03_14_1319-4627df25dde5_initial_schema.py  2026_03_16_0000-b1e2f3a4c5d6_seed_languages.py
core-service/app/: main.py
core-service/app/core/: config.py  dependencies.py
core-service/app/models/: __init__.py  base.py  language.py  phrase.py  review.py  review_history.py
core-service/app/routes/: anki.py  enriched_phrases.py  phrases.py  review_history.py  translate.py
core-service/app/schemas/: phrases.py  review_history.py
core-service/app/services/: anki_export_service.py  phrase_service.py  review_history_service.py  sm2.py  translation_service.py
core-service/scripts/: migrate.sh  seed_dev_data.py
core-service/tests/: conftest.py  test_phrases.py
enrichment-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
enrichment-service/app/: analyzer.py  config.py  consumer.py  enricher.py  lllm_client.py  llm_client.py  main.py  models.py  mongo_client.py  tatoeba_client.py
enrichment-service/tests/: enrich_tests.py
forum-service/: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
forum-service/api/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  requirements-test.txt  requirements.txt
forum-service/api/db/: indexes.py  mongo.py
forum-service/api/models/: category.py  reply.py  thread.py
forum-service/api/routes/: categories.py  replies.py  threads.py
forum-service/api/schemas/: category.py  common.py  reply.py  thread.py
forum-service/api/scripts/: seed_categories.py
forum-service/api/settings/: settings.py
forum-service/api/tests/: conftest.py
forum-service/app/: main.py
forum-service/app/core/: config.py  dependencies.py
forum-service/app/models/: post.py
forum-service/app/routes/: posts.py
forum-service/frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
(+316 files in other folders)
