[project]
name = "core-service"
version = "0.1.0"
description = "Core microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "genanki>=0.13.0",
    "motor>=3.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.30.0",
    "aio-pika>=9.4",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
show_missing = true


[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
