[project]
name = "enrichment-service"
version = "0.1.0"
description = "Word enrichment microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.4",
    "anthropic>=0.40",
    "fastapi[standard]>=0.115.0",
    "motor>=3.6.0",
    "nltk>=3.9",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
