[project]
name = "forum-service"
version = "0.1.0"
description = "Forum microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.0.0",
]